--- a/docs/faq/frontend-issues/frontend-startup-fail.mdx
+++ b/docs/faq/frontend-issues/frontend-startup-fail.mdx
@@ -2,21 +2,14 @@
 title: "前端项目启动失败"
 ---
 
-
-
 ```shell
 Node Sass could not find a binding for your current environment: Linux 64-bit with Node.js 12.x
 ```
 
-
-
-+ 解决方法，尝试执行
-
-
+解决方法，尝试执行：
 
 ```shell
 npm rebuild node-sass
 ```
-
 
 
