--- a/docs/faq/login-issues/wrong-password.mdx
+++ b/docs/faq/login-issues/wrong-password.mdx
@@ -4,23 +4,15 @@ title: "登录提示密码错误"
 
 ## 错误提示
 
-
-+ 登录输入 admin / 123456 提示密码错误
+登录输入 admin / 123456 提示密码错误
 
 ![](https://cdn.nlark.com/yuque/0/2021/png/283679/1615343649256-18f37b8e-c827-400e-ab0e-c46460d6c26c.png)
 
-
-
-
-
 ## 解决方案
 
-
-+ 请在 Chrome 浏览器 F12 打开 network  查看报错
-+ 如上报错 **请检查 auth、upms 模块是否已经正确启动**，注意服务端报错信息
-+ 确定密码解密是否成功 debugger 网关模块的如下 filter
-
-
+1. 请在 Chrome 浏览器 F12 打开 network 查看报错
+2. 如上报错请检查 auth、upms 模块是否已经正确启动，注意服务端报错信息
+3. 确定密码解密是否成功 debugger 网关模块的如下 filter
 
 ![](https://cdn.nlark.com/yuque/0/2022/png/283679/1641981467394-fe844a14-8a65-49f9-98d4-8e5708bd5a16.png)
 
