--- a/docs/faq/service-startup/main-yml-syntax-error.mdx
+++ b/docs/faq/service-startup/main-yml-syntax-error.mdx
@@ -2,13 +2,13 @@
 title: "main 方法启动失败 提示 yml 语法错误"
 ---
 
-### 
 ## 报错信息
-### ![](https://cdn.nlark.com/yuque/0/2020/png/283679/1605079257156-8eba1af2-6208-4f30-b9a1-1278b7f47671.png)
-## 解决方案
 
+![error message](https://cdn.nlark.com/yuque/0/2020/png/283679/1605079257156-8eba1af2-6208-4f30-b9a1-1278b7f47671.png)
+
+## 解决方案
 
 点击右侧 maven 面板，执行 maven 刷新 编译
 
-![](https://cdn.nlark.com/yuque/0/2020/png/283679/1605079311171-48477644-7777-48f7-b19f-07905ef067c4.png)
+![maven refresh](https://cdn.nlark.com/yuque/0/2020/png/283679/1605079311171-48477644-7777-48f7-b19f-07905ef067c4.png)
 
