--- a/docs/faq/code-references/root-pom-dependencies.mdx
+++ b/docs/faq/code-references/root-pom-dependencies.mdx
@@ -2,17 +2,11 @@
 title: "根 pom pig cloud dependencies parent 源码"
 ---
 
-
-
 ## 根 pom 中的 parent 源码
 
-
-![](https://cdn.nlark.com/yuque/0/2020/png/283679/1600327316832-beb4876b-558e-487c-9049-a9d2abacd1cf.png#align=left&display=inline&height=158&margin=%5Bobject%20Object%5D&originHeight=316&originWidth=1204&size=0&status=done&style=none&width=602)
-
-
-
-
+![root pom dependencies](https://cdn.nlark.com/yuque/0/2020/png/283679/1600327316832-beb4876b-558e-487c-9049-a2d2abacd1cf.png)
 
 ### 源码地址
-### 
-### [https://gitee.com/log4j/pig-cloud-dependencies-parent](https://gitee.com/log4j/pig-cloud-dependencies-parent)
+
+[https://gitee.com/log4j/pig-cloud-dependencies-parent](https://gitee.com/log4j/pig-cloud-dependencies-parent)
+
