--- a/docs/faq/frontend-issues/modify-pig-ui-port.mdx
+++ b/docs/faq/frontend-issues/modify-pig-ui-port.mdx
@@ -2,29 +2,19 @@
 title: "如何修改 pig ui 启动端口"
 ---
 
-![](https://cdn.nlark.com/yuque/0/2021/png/283679/1628496649383-11541c2a-3885-494f-8bd0-6eacb0e1f32d.png)
-
-
+![pig ui port configuration](https://cdn.nlark.com/yuque/0/2021/png/283679/1628496649383-11541c2a-3885-494f-8bd0-6eacb0e1f32d.png)
 
 ## 修改前端的启动端口
 
+前端默认的启动端口为 8080
 
-+ 前端默认的启动端口为 8080
-
-
-
-
-
-可以通过设置如下参数修改端口，例如修改端口为 9090
-
-
+可以通过设置如下参数修改端口，例如修改端口为 9090：
 
 ```javascript
- devServer: {
-    port: 8080,
-    ...
- }
+devServer: {
+  port: 8080,
+  ...
+}
 ```
-
 
 
