--- a/docs/faq/service-startup/java-jar-yml-input-length-error.mdx
+++ b/docs/faq/service-startup/java-jar-yml-input-length-error.mdx
@@ -2,31 +2,21 @@
 title: "java jar 运行 yml 报错 input length 1"
 ---
 
-
-
 ## 报错截图
 
+Windows java -jar 运行服务
 
-Windows  java -jar 运行服务
-
-![](https://cdn.nlark.com/yuque/0/2021/png/283679/1623201219521-bf6e7b3a-cee0-4337-b034-f84e11cc2089.png)
-
-
-
-
+![error screenshot](https://cdn.nlark.com/yuque/0/2021/png/283679/1623201219521-bf6e7b3a-cee0-4337-b034-f84e11cc2089.png)
 
 ## 错误原因
 
+nacos 中包含中文字符，在 window 下运行的存在缺陷，具体可以参考官方 issue: [https://github.com/alibaba/nacos/issues/1111](https://github.com/alibaba/nacos/issues/1111)
 
- nacos 中包含中文字符，在 window 下运行的存在缺陷，具体可以参考官方 issue:[https://github.com/alibaba/nacos/issues/1111](https://github.com/alibaba/nacos/issues/1111)
-
-### ![](https://cdn.nlark.com/yuque/0/2021/png/283679/1623201262614-7c240a91-f79e-4b11-86b6-3bc1df719694.png)
-
+![nacos issue](https://cdn.nlark.com/yuque/0/2021/png/283679/1623201262614-7c240a91-f79e-4b11-86b6-3bc1df719694.png)
 
 ## 修复方法
 
-
-启动时增加编码  -Dfile.encoding=utf-8
+启动时增加编码 -Dfile.encoding=utf-8
 
 ```shell
 java -Dfile.encoding=utf-8 -Xms2g -Xmx2g -Xmn1g -server -jar pig-auth.jar
