--- a/docs/faq/service-startup/sentinel-bean-duplicate.mdx
+++ b/docs/faq/service-startup/sentinel-bean-duplicate.mdx
@@ -3,6 +3,7 @@ title: "升级后无法启动提示 sentinel bean 重复"
 ---
 
 ## 报错信息
+
 ```plain
 APPLICATION FAILED TO START
 
@@ -21,11 +22,11 @@ by setting spring.main.allow-bean-definition-overriding=true
 
 ## 解决方案
 
+### ① 更新 pig_config.sql
 
-#### ①  更新 pig_config.sql
-+  [https://gitee.com/log4j/pig/blob/master/db/pig_config.sql](https://gitee.com/log4j/pig/blob/master/db/pig_config.sql)
-+ **更新 pig_config 数据库后，注意重启 pig-register 服务**
-+ 确定如下配置已经更新：
+- [https://gitee.com/log4j/pig/blob/master/db/pig_config.sql](https://gitee.com/log4j/pig/blob/master/db/pig_config.sql)
+- **更新 pig_config 数据库后，注意重启 pig-register 服务**
+- 确定如下配置已经更新：
 
-![](https://cdn.nlark.com/yuque/0/2022/png/283679/1643099641485-bd9266dd-a538-48b8-a707-79ddf20b2f78.png)
+![sentinel configuration](https://cdn.nlark.com/yuque/0/2022/png/283679/1643099641485-bd9266dd-a538-48b8-a707-79ddf20b2f78.png)
 
