--- a/docs/production/rainbond-deployment.mdx
+++ b/docs/production/rainbond-deployment.mdx
@@ -13,13 +13,17 @@ title: "Rainbond 部署整套应用"
 ## 前提条件
 
 - 拥有一套 Rainbond 环境。请参考官方文档 [快速安装 rainbond](https://www.rainbond.com/docs/quick-start/quick-install/)
-- 硬件：CPU：4 核，内存：16G
+- 硬件要求：
+  - CPU：4 核
+  - 内存：16G
 
 ## 快速部署 Spring Cloud Pig
 
 ### 1. 基于应用市场创建
 
-新增 > 基于应用市场创建组件 > 在 Rainbond 开源商店中搜索 **Pig** 进行安装。
+1. 点击"新增"
+2. 选择"基于应用市场创建组件"
+3. 在 Rainbond 开源商店中搜索 **Pig** 进行安装
 
 ![Rainbond 应用市场](/images/1668950643590-3a733637-1d1c-4e1b-8024-5ad46bcd4622.png)
 
@@ -28,8 +32,6 @@ title: "Rainbond 部署整套应用"
 **最终效果**：
 
 ![部署效果 1](/images/1668950664531-41019cf2-9454-4e4e-8e07-538755df3bc6.png)
-
-![部署效果 2](/images/1654655167647-b2cef5cf-1a0d-429a-b258-04c61d83a8ee.png)
 
 ## 使用源码在 Rainbond 上部署
 
