--- a/docs/production/https-frontend-deployment.mdx
+++ b/docs/production/https-frontend-deployment.mdx
@@ -1,555 +1,211 @@
 ---
-title: "pig-ui https 证书配置和使用教程"
+title: "HTTPS 证书配置和使用教程"
 ---
 
-# pig-ui https 证书配置和使用教程
 
+<Note>
+本文档仅提供 HTTPS 前端和 Nginx 部署相关配置。CentOS 部署请参考 [pig4cloud 部署文档](https://www.yuque.com/pig4cloud/pig/ggffp7)
+</Note>
 
-csdn 文档：[https://blog.csdn.net/if_deram/article/details/118443403](https://blog.csdn.net/if_deram/article/details/118443403)
-
-**须知：** centos 部署参考[https://www.yuque.com/pig4cloud/pig/ggffp7](https://www.yuque.com/pig4cloud/pig/ggffp7) 
-
-此文档只提供 https=》前端和 nginx 部署
-
-
-
-> 必须拥有域名，并且域名备案解析到服务器，教程以阿里云为主，腾讯云等云服务配置大同小异
->
-
-
+<Warning>
+必须拥有域名，并且域名已备案并解析到服务器。本教程以阿里云为主，其他云服务商配置方式类似。
+</Warning>
 
 ## 1. 登录阿里云
 
+访问 [阿里云登录页面](https://account.aliyun.com/login/login.htm)，输入用户名和密码登录。
 
-点击链接登录阿里云 [https://account.aliyun.com/login/login.htm](https://account.aliyun.com/login/login.htm)  ,输入用户名密码登录
+## 2. 购买 SSL 免费证书
 
+### 2.1 搜索 SSL
+在搜索框中输入 "ssl"，点击搜索或回车。
 
-
-## 2. 购买 ssl 免费证书
-
-
-### 2.1 搜索 ssl
-首先搜索框中输入 ssl，点击搜索或回车
-
-
-
-**注：如若域名和服务器不在同一运营商，须在云服务器所在运营商进行购买配置 ssl 证书**
-
-
-
-![](/images/1625310558222-a5b9b87b-14fc-4dce-924b-b3a6bd133431.png)
-
-
+<Note>
+如果域名和服务器不在同一运营商，需要在云服务器所在运营商购买和配置 SSL 证书。
+</Note>
 
 ### 2.2 购买证书
-弹出 SSL 证书相关内容，点击立即**购买证书**->选购 SSL 证书
-
-
-
-![](/images/1625310561382-45b7dcbe-979a-4e3d-b65b-549d4c1e1235.png)
-
-
+1. 点击"立即购买证书"
+2. 选择"选购 SSL 证书"
 
 ### 2.3 立即购买
-选择商品属性并点击**立即购买**
+选择商品属性并点击"立即购买"
 
-
-
-![](/images/1625310558223-1f5b579a-fcbf-4316-9bc5-5584d1c5ae36.png)
-
-
-
-## 3. ssl 证书申请
-
+## 3. SSL 证书申请
 
 ### 3.1 进入 SSL 管理控制台
-进去证书管理控制台，可以回到首页搜索 ssl，选择**管理控制台**
-
-
-
-![](/images/1625311398999-0835d844-af0f-4c03-b538-d83859e026f3.png)
-
-
+1. 返回首页搜索 "ssl"
+2. 选择"管理控制台"
 
 ### 3.2 进入免费证书
-点击左侧**SSL 证书**,右侧的**免费证书**
+点击左侧"SSL 证书"，选择右侧的"免费证书"
 
-
-
-> **注意：免费证书可以为你域名提供 https 的服务，但是不能为你的 2 级域名，3 级域名提供，只限于你的 1 级域名使用**
->
-
-
-
-![](/images/1625310558219-583bcce7-4deb-4e29-ae96-b179c454f396.png)
-
-
+<Warning>
+免费证书只能为一级域名提供 HTTPS 服务，不支持二级域名和三级域名。
+</Warning>
 
 ### 3.3 填写信息
-点击创建证书并且填写认证申请信息
+点击创建证书并填写认证申请信息。
 
-> **注：申请通过大概几分钟就可以**
->
+<Note>
+申请通过通常需要几分钟时间。
+</Note>
 
+#### 推荐方式
+1. 点击"申请"
+2. 填写基本信息：
+   - 域名验证方式：自动 DNS 验证
+   - CSR 生成方式：系统生成
+3. 点击下一步进入提交审核
 
+#### 不推荐方式
+1. 填写基本信息：
+   - 域名验证方式：自动 DNS 验证
+   - CSR 生成方式：手动填写
 
-+ 点击申请  
-![](/images/1625310560852-2419a3df-d1c4-42f7-b4ef-356cd271925e.png)
-+ 填写信息  
-**注：域名验证方式：如果您绑定的域名在本账号下，使用自动验证。推荐方式和不推荐方式任选其一**
-
-> 推荐选择：**域名验证方式** ->手工 DNS 验证       **CSR 生成方式** ->系统生成
->
-
-    - (推荐) 填写基本信息：**域名验证方式** ->自动 DNS 验证 (填写域名自动更新)，**CSR 生成方式** ->系统生成
-
-填写完成点击下一步跳转 3.4 提交审核  
-![](/images/1625310561754-7fdc5019-2e80-49e7-ace6-08874f871af0.png)
-
-    - （不推荐）填写基本信息：**域名验证方式** ->自动 DNS 验证， **CSR 生成方式** ->手动填写
-
-填写完成点击下一步跳转 3.4 提交审核
-
-> 注意：手动填写 CSR 的证书不支持部署到阿里云产品。
->
-> 在制作 CSR 文件时请务必保存好您的私钥文件。私钥和 SSL 证书一一对应，一旦丢失了私钥，您的数字证书也将不可使用
->
-
-**手动生成证书的密钥和 CSR 文件，window 下默认提供 Keytool 工具生成 CSR 文件**  
-		创建一个文件夹，在该文件夹下执行如下命令
-
-        1. 执行以下命令，生成 keystore 证书文件
-
-```shell
-  keytool -genkey -alias [$Alias] -keyalg RSA -keysize 2048 -storepass [123456] -keystore [$Keytool_Path]
-```
-
-> 说明
->
-> -alias: 证书别名，[$Alias]可自定义
->
-> -keyalg: 使用的 RSA 算法，不可以修改
->
-> -keysize: 密钥长度为 2048bit，不可以修改
->
-> -storepass: 密钥库口令，自定义
->
-> -keystore: 密钥库文件名
->
-> -Keytool_Path: 证书文件保存路径，默认当前路径
->
-
-        2. 根据系统返回的提示，输入生成 CSR 文件所需的信息。以下是关于提示的说明
-
-```plain
- 您的名字与姓氏是什么？(first and last name)：申请证书的域名。
- 您的组织单位名称是什么？(name of your organizational unit)：部门名称。
- 您的组织名称是什么？(name of your organization)：公司名称。
- 您所在的城市或区域名称是什么？(name of your City or Locality)：城市名称。
- 您所在的城市或区域名称是什么？(name of your State or Province)：州名或省份名称。
- 该单位的双字母国家/地区代码是什么？(two-letter country code for this unit)：两位字符的 ISO 国家代码。
-```
-
-        3. 确认输入内容是否正确，输入 Y 表示正确
-
-![](/images/1625310560470-8c5d7962-eb41-444e-8a66-0532a76581d5.png)
-
-        4. 执行以下命令，生成 CSR 文件
-
-
-
-```plain
-keytool -certreq -sigalg SHA256withRSA -alias [$Alias] -storepass [123456] -keystore [$Keytool_Path] -file [$Keytool_CSR]
-```
-
-![](/images/1625310560003-9f22d7f0-3568-4d22-8ced-a1ad21cc86d8.png)
-
-> 说明：
->
-> -sigalg: 摘要算法
->
-> [$Keytool_CSR]：CSR 文件存放路径
->
-> -alias、-storepass、-keystore:与 keystore 证书文件一致
->
-
-        5. 打开 CSR 文件，复制进`CSR文件内容`，点击确定
-
-> 如果生成 keystore 证书填写域名和当前认证域名不一致，或修改加密位数或算法报如下错误，解决方案：`检查域名是否一直，输入文件是否按照要求`
->
-
-  
-![](/images/1625310560819-0fb1ae8a-f124-4c7d-8ebe-e84e8cb024a8.png)
+<Warning>
+手动填写 CSR 的证书不支持部署到阿里云产品。在制作 CSR 文件时请务必保存好私钥文件。私钥和 SSL 证书一一对应，一旦丢失私钥，数字证书将不可使用。
+</Warning>
 
 ### 3.4 提交审核
-域名验证，提交审核
-
-  
-![](/images/1625310560391-24115415-5611-4ef4-ac9d-c0f86e1dba79.png)
-
-
+完成域名验证，提交审核。
 
 ## 4. 证书下载
 
+等待状态变为"已签发"后，点击下载，选择下载 Nginx 证书。
 
-等待状态变为**以签发** ,你就可以点击下载，只需要下载 nginx 证书
+<Note>
+下载内容说明：
+- 系统生成：包含证书信息和密钥
+- 自动填写：仅包含证书信息，密钥需要根据文件自行生成
+</Note>
 
-
-
-**下载内容为：** 系统生成=》证书信息和密钥，自动填写=》只有证书信息，密钥需要根据文件自己生成
-
-
-
-### 4.1 点击下载  
-![](/images/1625310563002-8143884e-d461-49ab-86d1-24d42cc010af.png)
-### 4.2 下载 nginx
-
-
-![](/images/1625310564268-bafbb392-dc3e-451a-9e18-0b8f1cf93558.png)
-
-
-
-### 4.3 开放安全组
-开放安全组，默认没有开始 443 安全组，需开启
-
-    1. 点击`**实例**` ，在选择你的服务器
-
-
-
-![](/images/1625310562648-772d99cd-eaec-4a1a-bad3-cef7aba1d2ca.png)
-
-    1. 点击`**安全组**` ，在点击`**内网入方向全部规则**` 查看是否开启 443 端口，如果没有开启，请选择`**安全组**` 列表`**加入安全组**` 并`**配置规则**`
-
-
-
-![](/images/1625310559623-3a34138f-d303-4c22-8963-3e2e14432a63.png)
-
-	![](/images/1625310562604-37e65600-cd21-4a54-b671-f0ee7abcbca2.png)
-
-![](/images/1625312633960-a4b90f2e-f1fb-43ee-b079-95d113c81cfc.png)
-
-
+### 4.1 开放安全组
+1. 点击"实例"，选择服务器
+2. 点击"安全组"，选择"内网入方向全部规则"
+3. 检查是否开启 443 端口
+4. 如未开启，选择"安全组"列表中的"加入安全组"并"配置规则"
 
 ## 5. 拷贝证书文件
 
-
-进入服务器 nginx 下 conf 目录创建 cert 并把 ssl 证书 _.pem 和 私钥 _.key 拷贝到这个目录
-
-
-
-> 注：文件可以放在服务器任意目录下
->
-
-
+在服务器 Nginx 的 conf 目录下创建 cert 目录，并将 SSL 证书（.pem）和私钥（.key）文件拷贝到该目录。
 
 ```shell
-#当前我 nginx 安装在/usr/local 目录下，一般软件都建议安装在此目录下
+# 示例：Nginx 安装在 /usr/local 目录下
 mkdir /usr/local/nginx/conf/cert -p
 ```
 
+## 6. Nginx 部署 SSL 模块（可选）
 
+<Note>
+通过 tar 包安装 Nginx 需要部署 SSL 模块。
+</Note>
 
-## 6. (可选)nginx 部署 ssl 模块
+### 6.1 检查 SSL 模块
+1. 进入 Nginx 安装目录下的 sbin 目录
+2. 执行 `./nginx -V` 命令检查是否包含 SSL 模块
 
-
-**注：** 通过 tar 包安装 nginx 需部署 ssl 模块
-
-
-
-### 6.1 查看 nginx 是否有 ssl 模块，如果没有则安装
-
-
-+ (可选)nginx 全局配置下执行-V 命令查看是否用 ssl 模块
-+ (可选) 在 nginx 安装目录下的**sbin 目录** 下查看
-
-
+### 6.2 安装 SSL 模块
+如果未安装 SSL 模块，需要重新编译安装：
 
 ```shell
-#进入 nginx 安装目录下的 sbin
-cd /usr/local/nginx/sbin
-#执行./nginx -V 命令
-./nginx -V
-#以下是返回值
-# configure arguments: --prefix=/usr/local/nginx --pid-path=/var/run/nginx/nginx.pid --lock-path=/var/lock/nginx.lock --error-log-path=/var/log/nginx/error.log --http-log-path=/var/log/nginx/access.log --with-http_gzip_static_module --http-client-body-temp-path=/var/temp/nginx/client --http-proxy-temp-path=/var/temp/nginx/proxy --http-fastcgi-temp-path=/var/temp/nginx/fastcgi --http-uwsgi-temp-path=/var/temp/nginx/uwsgi --http-scgi-temp-path=/var/temp/nginx/scgi
-```
-
-
-
-+ (可选) 进入到 nginx 解压的文件夹 objs 文件夹下验证是否拥有 ssl，演示解压文件在/home/software 目录下
-
-
-
-```shell
-#进入 software 目录
-cd /home/software
-#进入 nginx 解压目录下 objs 目录，nginx 模块都会存放在 objs 文件夹下
-cd nginx/objs
-#进入 ngx_modules.c 文件搜索 ssl 验证是否存在
-vi ngx_modules.c
-#输入/ssl 查找
-/ssl
-```
-
-
-
-+ 未查找到，返回到 nginx 解压目录，新增 ssl 模块
-
-
-
-```shell
-#进入到 nginx 解压目录
-cd cd /home/software/nginx
-#执行命令，--prefix 为你 nginx 安装目录
+cd /home/software/nginx
 ./configure \
 --prefix=/usr/local/nginx \
---pid-path=/var/run/nginx/nginx.pid \
---lock-path=/var/lock/nginx.lock \
---error-log-path=/var/log/nginx/error.log \
---http-log-path=/var/log/nginx/access.log \
---with-http_gzip_static_module \
---http-client-body-temp-path=/var/temp/nginx/client \
---http-proxy-temp-path=/var/temp/nginx/proxy \
---http-fastcgi-temp-path=/var/temp/nginx/fastcgi \
---http-uwsgi-temp-path=/var/temp/nginx/uwsgi \
---http-scgi-temp-path=/var/temp/nginx/scgi \
 --with-http_ssl_module
-```
-
-
-
-+ 执行编译并且安装
-
-
-
-```shell
 make
 make install
 ```
 
-
-
-### 6.2 检测是否安装成功 (2 种方案可选)
-
-
-1. 通过查看解压**nginx/objs目录下ngx_modules.c** 是否安装 ssl 模块
-
-```shell
-#进入 software 目录
-cd /home/software
-#进入 objs 目录，nginx 模块都会存放在 objs 文件夹下
-cd nginx/objs
-#进入 ngx_modules.c 文件搜索 ssl 验证是否存在
-vi ngx_modules.c
-#输入/ssl 查找模块
-/ssl
-```
-
-2. 通过 nginx 安装目录 sbin 下执行**./nginx -V** 查看
-
-```shell
-#进入安装目录 sbin 文件夹下
-cd /usr/local/nginx/sbin
-#执行./nginx -V 命令
-./nginx -V
-#以下是返回值，已经拥有 with-http_ssl_module 模块
-# configure arguments: --prefix=/usr/local/nginx --pid-path=/var/run/nginx/nginx.pid --lock-path=/var/lock/nginx.lock --error-log-path=/var/log/nginx/error.log --http-log-path=/var/log/nginx/access.log --with-http_gzip_static_module --http-client-body-temp-path=/var/temp/nginx/client --http-proxy-temp-path=/var/temp/nginx/proxy --http-fastcgi-temp-path=/var/temp/nginx/fastcgi --http-uwsgi-temp-path=/var/temp/nginx/uwsgi --http-scgi-temp-path=/var/temp/nginx/scgi --with-http_ssl_module
-```
-
-
-
 ## 7. 前端部署
-> **以下部署方式任选其一**
->
 
-### 7.1 通过 tar 安装 nginx 方式 (可选)
-
+### 7.1 通过 tar 安装 Nginx 方式
 
 ```shell
-#进入 nginx 安装目录下 conf 文件
+# 进入 Nginx 配置目录
 cd /usr/local/nginx/conf/
-#修改 nginx 配置文件
 vi nginx.conf
+```
 
-user  root;
-worker_processes  auto;
+配置示例：
+
+```nginx
+user root;
+worker_processes auto;
 
 events {
-    worker_connections  1024;
+    worker_connections 1024;
 }
-
 
 http {
     server {
-        #如果您使用 Nginx 1.15.0 及以上版本，请使用 listen 443 ssl 代替 listen 443 和 ssl on
         listen 443 ssl;
-        #listen 443;
-        # 开启 ssl
-        #ssl on;
-        #替换你自己的域名
-        server_name www.domian.com domian.com;
-        # 配置 ssl 证书，替换你自己下载的 nginx 证书，可以是相对路径或绝对路径
-        ssl_certificate cert/5887362_www.yourpem.com.pem;
-        # 配置证书秘钥，系统生成=》替换你自己下载的 nginx 密钥，手动填写=》需要你通过 openssl 生成密钥上传，可以是相对路径或绝对路径
-        ssl_certificate_key cert/5887362_www.yourkey.com.key;
-        # ssl 会话 cache
+        server_name www.domain.com domain.com;
+        ssl_certificate cert/your_cert.pem;
+        ssl_certificate_key cert/your_key.key;
         ssl_session_cache shared:SSL:1m;
-        # ssl 会话超时时间
         ssl_session_timeout 5m;
-        # 配置加密套件，写法遵循 openssl 标准
         ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
-        #表示使用的 TLS 协议的类型
         ssl_prefer_server_ciphers on;
+        
         root /data/pig-ui;
         index index.html;
+        
         location / {
             root /data/pig-ui;
             index index.html;
         }
-        # 注意维护新增微服务，gateway 路由前缀
-            location ~* ^/(code|auth|admin|gen) {
-                proxy_pass http://127.0.0.1:9999;
-                proxy_set_header   Host              $host;
-                proxy_set_header   X-Forwarded-Proto $scheme;
-                add_header Cache-Control no-store;
-                proxy_connect_timeout 15s;
-                proxy_send_timeout 15s;
-                proxy_read_timeout 15s;
-                proxy_set_header X-Real-IP $remote_addr;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto http;
-        }
-        server{
-            listen 80;
-            #换成你的域名
-            server_name  www.domian.com domian.com;
-            #重定向到 https
-            return 301 https://$server_name$request_uri;
+        
+        location ~* ^/(code|auth|admin|gen) {
+            proxy_pass http://127.0.0.1:9999;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            add_header Cache-Control no-store;
+            proxy_connect_timeout 15s;
+            proxy_send_timeout 15s;
+            proxy_read_timeout 15s;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto http;
         }
     }
+    
+    server {
+        listen 80;
+        server_name www.domain.com domain.com;
+        return 301 https://$server_name$request_uri;
+    }
 }
-
-#启动 nginx，进入 nginx 安装目录下的 sbin
-cd /usr/local/nginx/sbin
-#启动 nginx
-./nginx
 ```
 
-
-
-### 7.2 通过 yum 命令安装 nginx 方式 (可选)
-
+### 7.2 通过 yum 安装 Nginx 方式
 
 ```shell
 mkdir -p /data/pig-ui && cp -r dist/* /data/pig-ui
-
 cd /etc/nginx/conf.d && rm -f default.conf
-
 vim pigx.conf
-
-server {
-    #如果您使用 Nginx 1.15.0 及以上版本，请使用 listen 443 ssl 代替 listen 443 和 ssl on
-	listen 443 ssl;
-	#listen 443;
-	# 开启 ssl
-	#ssl on;
-	#替换你自己的域名
-	server_name www.domian.com domian.com;
-	# 配置 ssl 证书，替换你自己下载的 nginx 证书，可以是相对路径或绝对路径
-	ssl_certificate cert/5887362_www.yourpem.com.pem;
-	# 配置证书秘钥，系统生成=》替换你自己下载的 nginx 密钥，手动填写=》需要你通过 openssl 生成密钥上传，
-	ssl_certificate_key cert/5887362_www.yourkey.com.key;
-	# ssl 会话 cache
-	ssl_session_cache shared:SSL:1m;
-	# ssl 会话超时时间
-	ssl_session_timeout 5m;
-	# 配置加密套件，写法遵循 openssl 标准
-	ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
-	#表示使用的 TLS 协议的类型
-	ssl_prefer_server_ciphers on;
-	root /data/pig-ui;
-	index index.html;
-	location / {
-        root /data/pig-ui;
-		index index.html;
-    }
-	# 注意维护新增微服务，gateway 路由前缀
-    location ~* ^/(code|auth|admin|gen) {
-       	proxy_pass http://127.0.0.1:9999;
-       	proxy_set_header   Host              $host;
-		proxy_set_header   X-Forwarded-Proto $scheme;
-		add_header Cache-Control no-store;
-		proxy_connect_timeout 15s;
-       	proxy_send_timeout 15s;
-       	proxy_read_timeout 15s;
-       	proxy_set_header X-Real-IP $remote_addr;
-       	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-       	proxy_set_header X-Forwarded-Proto http;
-    }
-}
-server {
-    #监听 80 端口
-	listen 80;
-	#替换自己的域名
-    server_name  www.domain.com domain.com;
-    #开启 https，http 失效需重定向到 https
-	return 301 https://$server_name$request_uri;
-}
-
-#启动 nginx
-nginx
 ```
 
+配置内容与 7.1 节相同。
 
+## 8. 验证部署
 
-## 8.  验证是否成功
+访问 `https://www.domain.com` 验证部署是否成功。
 
+## 参考文档
 
-```shell
-#浏览器输入地址验证 domain 换成你的 ip 地址
-https://www.domian.com
-```
+- [阿里云 HTTPS 配置教程](https://help.aliyun.com/video_detail/212905.html)
+- [华为云免费 SSL 申请](https://support.huaweicloud.com/qs-ccm/ccm_07_0012.html)
+- [腾讯云免费 SSL 申请](https://cloud.tencent.com/document/product/400/6814)
 
+## 作者信息
 
+文档作者：[xiaozhang](https://gitee.com/xiaozhang_xiaozhang)
 
-# 可参考文档
+## 问题咨询
 
-
-阿里云申请配置 https 参考步骤
-
-
-
-[https://help.aliyun.com/video_detail/212905.html?spm=a2c4g.11186623.2.2.20fa1a26hDPFQM](https://help.aliyun.com/video_detail/212905.html?spm=a2c4g.11186623.2.2.20fa1a26hDPFQM)
-
-
-
-华为云申请免费 ssl 步骤
-
-
-
-[https://support.huaweicloud.com/qs-ccm/ccm_07_0012.html](https://support.huaweicloud.com/qs-ccm/ccm_07_0012.html)
-
-
-
-腾讯云申请免费 ssl 步骤
-
-
-
-1. 申请  
-[https://cloud.tencent.com/document/product/400/6814](https://cloud.tencent.com/document/product/400/6814)
-2. 验证域名  
-[https://support.huaweicloud.com/ccm_faq/ccm_01_0268.html#ccm_01_0268__fig1141255248](https://support.huaweicloud.com/ccm_faq/ccm_01_0268.html#ccm_01_0268__fig1141255248)
-
-
-
-
-
-# 本文作者
-文档作者：[https://gitee.com/xiaozhang_xiaozhang](https://gitee.com/xiaozhang_xiaozhang)
-
-
-
-## ❤  问题咨询
-![](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+<Card title="技术支持" icon="help">
+如有问题，请联系技术支持获取帮助。
+</Card>
 
