refactor(docs): enhance deployment documentation with notes and links
This commit improves the deployment documentation across multiple files by adding informative notes and links for better user guidance. Key updates include:

1. Introduction of `<Note>` and `<Card>` components to highlight important information and provide quick access to related resources.
2. Clarification of setup instructions and configuration details for various deployment environments.
3. Enhanced visual elements and organization to improve readability and user experience.

These changes aim to facilitate a smoother onboarding process for developers using the Pig4Cloud platform.

--- a/docs/deployment/linux-deploy.mdx
+++ b/docs/deployment/linux-deploy.mdx
@@ -5,9 +5,13 @@ title: "Linux-部署应用"
 ## 基础环境搭建
 ### ① 购买 ECS
 
+<Note>
 特别说明：开发环境、测试环境强烈建议选择【ECS 按量付费】[👉🏻 《阿里云服务器 ECS 按量付费和包年包月有什么区别？》](https://developer.aliyun.com/article/1178762?source=5176.11533457&userCode=ueyxv2qf)
+</Note>
 
-- [👉🏻 建议直接访问阿里云 ECS 官网进行购买，无需关注官方活动，因为官方活动并不一定会更便宜。【选择按量付费】](https://www.aliyun.com/product/ecs?source=5176.11533457&userCode=ueyxv2qf)
+<Card title="阿里云 ECS 购买" icon="link" href="https://www.aliyun.com/product/ecs?source=5176.11533457&userCode=ueyxv2qf">
+建议直接访问阿里云 ECS 官网进行购买，无需关注官方活动，因为官方活动并不一定会更便宜。【选择按量付费】
+</Card>
 
 | 自定义购买 | 配置 |
 | --- | --- |
@@ -23,7 +27,6 @@ title: "Linux-部署应用"
 
 ```shell
 curl -O http://vip.pigx.top/os7init.sh 
-
 sh os7init.sh pig4cloud
 ```
 
@@ -31,11 +34,8 @@ sh os7init.sh pig4cloud
 
 ```shell
 wget https://cdn.azul.com/zulu/bin/zulu17.44.15-ca-jdk17.0.8-linux.x86_64.rpm
-
 rpm -ivh zulu17.44.15-ca-jdk17.0.8-linux.x86_64.rpm
-
 java -version
-
 yum install -y fontconfig mkfontscale
 ```
 
@@ -43,9 +43,7 @@ yum install -y fontconfig mkfontscale
 
 ```shell
 wget http://vip.pigx.top/mysql80-community-release-el7-11.noarch.rpm -O mysql80-community-release-el7-7.noarch.rpm
-
 rpm -ivh mysql80-community-release-el7-7.noarch.rpm
-
 yum install -y mysql mysql-server
 
 # 修改配置文件
@@ -76,7 +74,6 @@ FLUSH PRIVILEGES;
 ### ⑤ 安装 Redis
 ```shell
 yum install redis
-
 systemctl restart redis
 ```
 
@@ -112,7 +109,9 @@ yum install -y nginx
 
 ### 准备源码包
 
-- **注意根据不同架构选择，打包命令**
+<Note>
+注意根据不同架构选择，打包命令
+</Note>
 
 ```shell
 # 微服务版本打包
@@ -122,7 +121,9 @@ mvn clean install -Pcloud
 mvn clean install -Pboot
 ```
 
-- pig-ui 前端 编译 dist
+<Note>
+pig-ui 前端编译 dist
+</Note>
 
 ```shell
 npm run build
@@ -144,7 +145,6 @@ source db/pig_config.sql;
 ```shell
 # 微服务版本启动命令
 nohup java -Dfile.encoding=utf-8 -jar pig-register.jar > /dev/null 2>&1 &
-
 nohup java -Dfile.encoding=utf-8 -jar pig-monitor.jar > /dev/null 2>&1 &
 nohup java -Dfile.encoding=utf-8 -jar pig-gateway.jar > /dev/null 2>&1 &
 nohup java -Dfile.encoding=utf-8 -jar pig-auth.jar > /dev/null 2>&1 &
@@ -158,9 +158,7 @@ nohup java -Dfile.encoding=utf-8 -jar pig-boot.jar > /dev/null 2>&1 &
 
 ```shell
 mkdir -p /data/pig-ui && cp -r dist/* /data/pig-ui
-
 cd /etc/nginx/conf.d && rm -f default.conf
-
 vim pig.conf
 ```
 
@@ -218,6 +216,9 @@ server {
 
 ![](/images/1600526129960-ccee8fcd-1db8-4597-a9ab-411b0ea84f67.png)
 
-## ❤  问题咨询
-![](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+## 问题咨询
+
+<Card title="加入社区" icon="link" href="#">
+![广告党太多，无备注不通过](/images/1662563973685-c22e9831-db66-42b5-973f-886d25d1e0e7.gif)
+</Card>
 
