--- a/docs/deployment/quick-start.mdx
+++ b/docs/deployment/quick-start.mdx
@@ -15,9 +15,7 @@ title: "开发 - 快速开始"
 | Redis | 7+ | [redis-windows-7.4.2.zip](https://www.yuque.com/attachments/yuque/0/2025/zip/283679/1741774624160-9d8d46df-e0f1-40d5-af31-127d43a2c953.zip) | |
 | node | 18 | [node-v18.20.3-x64.msi.zip](https://www.yuque.com/attachments/yuque/0/2024/zip/283679/1720584223073-e682aad2-1971-43d4-a22e-74484f638562.zip) | 强制要求 |
 | 常用工具 | idea 2023+ | [dev-tools.zip](https://www.yuque.com/attachments/yuque/0/2023/zip/283679/1688793203179-32a2dcff-da73-4642-a009-28fb0623687a.zip) | 非必须 |
-| | navicat | | |
-| | switchHosts | | |
-| | Git | | |
+
 
 ## ② 项目下载
 
@@ -39,7 +37,9 @@ source db/pig_config.sql;
 
 ## ④ 配置文件修改
 ### 4.1 修改 regiser 数据库源信息
+<Note>
 **找到源代码目录 pig-register，修改数据库连接信息，然后 Main 方法启动。**
+</Note>
 
 ```yaml
 pig/pig-register/src/main/resources/application.yml 
@@ -129,9 +129,12 @@ npm run dev
 </Warning>
 
 ## ⑦ 打卡上榜
-[此处为语雀卡片，点击链接查看](https://www.yuque.com/docs/132585040#a6Zp1)
+<Card title="打卡上榜" icon="link" href="https://www.yuque.com/docs/132585040#a6Zp1">
+点击查看打卡上榜
+</Card>
 
-## ❤  问题咨询
-## 加入社区
+## 问题咨询
+<Card title="加入社区" icon="link" href="#">
 ![广告党太多，无备注不通过](/images/1728703600955-45cedb6b-0f2a-4949-ac17-a51239a503c3.png)
+</Card>
 
