--- a/docs/deployment/k8s-deploy.mdx
+++ b/docs/deployment/k8s-deploy.mdx
@@ -2,10 +2,13 @@
 title: "K8S-部署应用"
 ---
 
-[bilibili](https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=38&page=38&autoplay=0)
+<Note>
+观看视频教程：[K8S部署教程](https://player.bilibili.com/player.html?bvid=BV12t411B7e9&p=38&page=38&autoplay=0)
+</Note>
 
 # 准备 KubeSphere 环境
-[KubeSphere](https://kubesphere.io/) 是在 [Kubernetes](https://kubernetes.io/) 之上构建的面向云原生应用的**分布式操作系统**，完全开源，支持多云与多集群管理，提供全栈的 IT 自动化运维能力，简化企业的 DevOps 工作流。它的架构可以非常方便地使第三方应用与云原生生态组件进行即插即用 (plug-and-play) 的集成
+
+[KubeSphere](https://kubesphere.io/) 是在 [Kubernetes](https://kubernetes.io/) 之上构建的面向云原生应用的**分布式操作系统**，完全开源，支持多云与多集群管理，提供全栈的 IT 自动化运维能力，简化企业的 DevOps 工作流。它的架构可以非常方便地使第三方应用与云原生生态组件进行即插即用 (plug-and-play) 的集成。
 
 ```shell
 export KKZONE=cn
@@ -16,31 +19,29 @@ chmod +x kk
 ```
 
 # 图形化部署
+
 ![](/images/1699792565741-679e490d-d597-4726-be94-dab9cca3c121.png)
 
+<Note>
 以上 PIG 通过 Github Action 自动构建的镜像存储在阿里云 ACR，可通过以下地址获取：
+</Note>
 
 ```shell
 # 有状态服务
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-mysql:latest
-
 redis:7
 
 # 无状态服务
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-register:latest
-
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-upms:latest
-
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-auth:latest
-
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-gateway:latest
-
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-codegen:latest
-
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-quartz:latest
-
 registry.cn-hangzhou.aliyuncs.com/pigx/pig-ui:latest
 ```
 
-[此处为语雀卡片，点击链接查看](https://www.yuque.com/docs/146680364#P1pc9)
+<Card title="详细部署文档" icon="link" href="https://www.yuque.com/docs/146680364#P1pc9">
+点击查看详细部署文档
+</Card>
 
