--- a/docs/deployment/monolith-usage.mdx
+++ b/docs/deployment/monolith-usage.mdx
@@ -2,7 +2,9 @@
 title: "进阶 - 单体使用"
 ---
 
-[此处为语雀卡片，点击链接查看](https://www.yuque.com/docs/147533675#IrzMX)
+<Card title="详细文档" icon="link" href="https://www.yuque.com/docs/147533675#IrzMX">
+点击查看详细文档
+</Card>
 
 ## 架构设计
 ![](/images/1700533656634-26d87aae-31eb-44ce-a2e6-fc33e8184887.png)
@@ -18,7 +20,9 @@ title: "进阶 - 单体使用"
 
 ## 一、运行服务端
 ### ① 下载服务端代码
-- 下载服务端源码，**注意分支选择**
+<Note>
+下载服务端源码，**注意分支选择**
+</Note>
 
 ```shell
 git clone https://gitee.com/log4j/pig.git -b jdk17
@@ -32,16 +36,22 @@ pig
 ```
 
 ### ④ 加载 pig-boot 模块
-- 切换 Maven profils 至 boot 
+<Note>
+切换 Maven profils 至 boot 
+</Note>
 
 ![](/images/1713334205920-02749b6a-3a0a-4dee-acec-e3df113266e1.png)
 
 ### ③ 运行 upms 模块
-- 修改 **pig-boot/application-dev.yml**，redis、mysql 链接信息
+<Note>
+修改 **pig-boot/application-dev.yml**，redis、mysql 链接信息
+</Note>
 
 ![](/images/1712644523061-baa7c014-3a28-4b75-bf2a-d57149db8b46.png)
 
-- **PigBootApplication.java main 方法启动服务即可**
+<Note>
+**PigBootApplication.java main 方法启动服务即可**
+</Note>
 
 ![](/images/1712644593758-49f0f659-d8c1-4277-a131-5bba3fa3f334.png)
 
@@ -51,11 +61,15 @@ pig
 git clone https://gitee.com/log4j/pig-ui.git -b master
 ```
 
-- **配置前端架构为单体**
+<Note>
+**配置前端架构为单体**
+</Note>
 
 ![](https://minio.pigx.top/oss/202311/1700473026.png)
 
-- 安装依赖运行
+<Note>
+安装依赖运行
+</Note>
 
 ```shell
 # node 版本需要 16/18
@@ -79,17 +93,21 @@ npm run dev
 
 ## 四、其他说明
 ### ① 加快启动速度
+<Note>
 由于单体架构的特性，需要在 JVM 启动之前加载所有模块，这会导致启动速度缓慢。**根据实际业务情况，可以屏蔽以下相关的依赖。**
+</Note>
 
 ![](/images/1713335024964-cbefd3ba-4d5f-44ec-8158-d33a5cc57ed0.png)
 
 ### ② swagger 调试
+<Note>
 和微服务版本请求地址不同的是
 
 - swagger-ui: [http://127.0.0.1:9999/admin/swagger-ui.html](http://127.0.0.1:9999/admin/swagger-ui.html) 
 - knife4j: [http://127.0.0.1:9999/admin/doc.html](http://127.0.0.1:9999/admin/doc.html)
 
 调试参数参考文档： [https://www.yuque.com/pig4cloud/pig/bmgpca](https://www.yuque.com/pig4cloud/pig/bmgpca)
+</Note>
 
-![](/images/1700527095040-b7284663-dc53-4c11-a0c2-7b59c1cd2a08.png)
+![](/images/1700527095040-b7284663-db53-4c11-a0c2-7b59c1cd2a08.png)
 
