--- a/docs/faq/login-issues/captcha-not-showing.mdx
+++ b/docs/faq/login-issues/captcha-not-showing.mdx
@@ -4,14 +4,18 @@ title: "登录页面不显示验证码"
 
 ## 错误提示
 
-
-![](/images/1615343513561-5ae8f980-fbd2-4b9e-976e-4e0eca8bf758.jpeg)
-
-
+![验证码不显示错误提示](/images/1615343513561-5ae8f980-fbd2-4b9e-976e-4e0eca8bf758.jpeg)
 
 ## 解决方案
-+ 请检查 redis server 是否启动可用
-+ 请检查 .env 文件 **<font style="color:#DF2A3F;">VITE_IS_MICRO</font>** 配置项是否对应当前服务端架构
-+ **<font style="color:#DF2A3F;">请检查 配置 hosts 配置是否正确可用   ping pig-gateway  | ping pig-redis</font>**
-+ 请检查 后台 网关模块是否报错
+
+<Note>
+请按照以下步骤检查并解决问题：
+</Note>
+
+1. 检查 Redis 服务是否正常运行
+2. 检查 `.env` 文件中的 `VITE_IS_MICRO` 配置项是否与当前服务端架构匹配
+3. 检查 hosts 配置是否正确：
+   - 执行 `ping pig-gateway` 测试网关连接
+   - 执行 `ping pig-redis` 测试 Redis 连接
+4. 检查后台网关模块是否有错误日志
 
