--- a/docs/frontend/floating-input.mdx
+++ b/docs/frontend/floating-input.mdx
@@ -26,14 +26,14 @@ const PopoverInput = defineAsyncComponent(
 
 ## 属性说明
 
-| 属性名称 | 描述 | 类型 | 默认值 |
+| 属性 | 说明 | 类型 | 默认值 |
 | --- | --- | --- | --- |
 | value | 值 | String | - |
 | type | 类型 | String | 'text' |
 | width | 宽度 | Number \| String | '300px' |
 | placeholder | 提示文字 | String | - |
 | disabled | 是否禁用 | Boolean | false |
-| options | 选项列表 | Array<any[]> | [] |
+| options | 选项列表 | Array\<any\> | [] |
 | size | 大小 | 'default' \| 'small' \| 'large' | 'default' |
 | limit | 字符限制 | Number | 200 |
 | showLimit | 是否显示字符限制 | Boolean | false |
