--- a/docs/frontend/left-query-tree.mdx
+++ b/docs/frontend/left-query-tree.mdx
@@ -39,11 +39,11 @@ const handleNodeClick = (e: any) => {};
 
 ## 属性说明
 
-| 属性 | 类型 | 默认值 | 说明 |
+| 属性 | 说明 | 类型 | 默认值 |
 | --- | --- | --- | --- |
-| props | Object | { label: 'name', children: 'children', value: 'id' } | 树形结构的属性配置 |
-| placeholder | String | '' | 输入框的占位符 |
-| loading | Boolean | false | 是否显示加载状态 |
-| query | Function | - | 包含查询方法的函数，必须返回 Promise 类型的数据，并在组件中被调用 |
+| props | 树形结构的属性配置 | Object | `{ label: 'name', children: 'children', value: 'id' }` |
+| placeholder | 输入框的占位符 | String | '' |
+| loading | 是否显示加载状态 | Boolean | false |
+| query | 包含查询方法的函数，必须返回 Promise 类型的数据，并在组件中被调用 | Function | - |
 
 
