--- a/docs/integration/sso-ruoyi-pig-separated.mdx
+++ b/docs/integration/sso-ruoyi-pig-separated.mdx
@@ -1,5 +1,5 @@
 ---
-title: "[单点案例] ruoyi 系统接入 pig（分离）"
+title: "[单点案例] ruoyi 系统接入 pig"
 ---
 
 ![](/images/1689225998534-54174374-b99e-4b7c-9f1a-457e2dc3c167.png)
