refactor(docs): update FAQ guidelines and enhance navigation structure
This commit introduces several improvements to the documentation, including:

1. Renaming the "提问须知" section to "问题提交指南" and updating its content for clarity and completeness.
2. Adding a structured format for submitting issues, including version information and detailed logging requirements.
3. Enhancing the navigation structure by adding global anchors and new tabs for quick access to resources, including a video tutorial and a WeChat group link.

These changes aim to improve user experience and facilitate better issue reporting for developers using the Pig4Cloud platform.

--- a/docs/faq/asking-guidelines/question-guidelines.mdx
+++ b/docs/faq/asking-guidelines/question-guidelines.mdx
@@ -1,32 +1,51 @@
 ---
-title: "提问须知"
+title: "问题提交指南"
+description: "了解如何正确提交问题，包括版本信息、日志收集和代码修改说明"
 ---
 
+## 问题提交地址
+
+<Card title="问题提交" icon="link" href="https://gitee.com/log4j/pig/issues">
+  点击此处提交问题
+</Card>
+
+## 问题提交要求
+
+### 1. 版本信息
+
 <Note>
-问题说清楚，别人没时间给你猜
+请提供以下版本信息：
+- 软件版本：pom.xml 中 version 定义
+- JDK版本：8/17
+- 架构类型：微服务/单体
 </Note>
 
-## 问题提交
-[Issues · lengleng/pig - Gitee.com](https://gitee.com/log4j/pig/issues)
+### 2. 日志信息
 
-## 提供如下信息
+<Warning>
+请确保提供完整的日志信息，不要只截取部分内容
+</Warning>
 
-1. 请明确软件的版本；
+<Tabs>
+  <Tab title="前端日志">
+    1. 浏览器 F12 控制台输出
+    2. Network 网络请求返回
+  </Tab>
+  <Tab title="后端日志">
+    1. IDEA 控制台日志
+    2. 微服务架构需提供：
+       - 网关日志
+       - 认证中心日志
+       - 业务微服务日志
+  </Tab>
+</Tabs>
 
-<Note>
-版本：pom.xml 中 version 定义
+### 3. 代码修改说明
 
-JDK: 8/17 版本
-
-架构：微服务/单体
-</Note>
-
-2. 详细的各模块日志及截图；
-    1. 前端日志：浏览器 F12 控制台输出、network 网络请求返回
-    2. 后端日志：使用 IDEA 查看控制台日志，若为微服务，请提供网关、认证中心、业务微服务的详细日志
-    3. 请提供完整的截图，不要只截取部分内容
-
-3. 你做了什么修改、如何回显，请提供前后端的每步代码截图。
+请提供以下信息：
+1. 修改的具体内容
+2. 修改后的效果
+3. 前后端代码的完整截图
 
 
 
