refactor(aiFlow/executors): Convert executor modules to TypeScript with type definitions
- Migrate all executor modules (codeNode, dbNode, endNode, httpNode, llmNode, noticeNode, questionNode, startNode, switchNode) to TypeScript
- Create new type definitions in executor.ts and executors.ts
- Add comprehensive type annotations for node execution functions
- Improve type safety and code readability
- Maintain existing executor logic and functionality

--- a/docs/preface.mdx
+++ b/docs/preface.mdx
@@ -1,32 +1,75 @@
 ---
-title: "前言"
+title: "卸载最前"
 ---
 
-![](https://gitee.com/log4j/pig/badge/star.svg?theme=dark) ![](https://gitee.com/log4j/pig/badge/fork.svg?theme=dark)
+<table>
+  <tr>
+    <td>
+      <a href="https://gitee.com/log4j/pig">
+        <img src="https://gitee.com/log4j/pig/badge/star.svg?theme=dark" alt="Gitee Stars" />
+      </a>
+    </td>
+    <td>
+      <a href="https://gitee.com/log4j/pig">
+        <img src="https://gitee.com/log4j/pig/badge/fork.svg?theme=dark" alt="Gitee Forks" />
+      </a>
+    </td>
+  </tr>
+</table>
 
-### 写在最前
-- 本文档内容由 pig4cloud 团队整理完成，转载请联系我们。
-- 文档内容持续更新，内容错误或者您有想额外了解的内容[**此处留言**](http://issue.pig4cloud.com)。
-- 代码随时更新，兼容最新的 Spring Cloud 技术栈。
-- 本文档内容全部免费，托管在语雀平台 [**此处关注**](https://www.yuque.com/login?platform=wechat&inviteToken=d250cce7a9bfb322880f20b1d1c4cdc436d9b7c11fc748cf77b8a25019705a6e)。
-- **本文档内容不适配 PIG 商业产品，**[**商业用户无需参考学习**](https://pig4cloud.com/data/doc/pigx/)。
+<Note>
+本文档内容由 pig4cloud 团队整理完成，转载请联系我们。文档内容持续更新，[问题反馈](http://issue.pig4cloud.com)。
+</Note>
 
-### 产品定位
-- 大道至简。不过多引入其他无用中间件，降低系统复杂度，提升分布式系统可用性。
-- 精益求精。借鉴国外 [JHipster](https://www.jhipster.tech)、CUBA 开发思想，致力优质代码编写国内推广。
-- 安全至上。提供 [**Spring Security OAuth 2.0**](https://spring.io/projects/spring-security-oauth) 权限控制的最佳项目实践。
-- 规范编码。严格按照业内标准规范 [**spring-javaformat**](https://github.com/spring-io/spring-javaformat)、[**prettier-vscode**](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode)
+<Warning>
+**商业用户注意**：本文档内容不适配 PIG 商业产品，[商业版文档](https://pig4cloud.com/data/doc/pigx/) 请单独获取。
+</Warning>
 
-### 配套代码
+### 产品优势
 
-- **如果觉着文档、代码写的不错，烦请点个 star**
+<CardGroup>
+  <Card title="极简架构" icon="leaf">
+    不过多引入其他无用中间件，降低系统复杂度
+  </Card>
+  <Card title="安全规范" icon="shield">
+    Spring Security OAuth 2.0 最佳实践
+  </Card>
+  <Card title="全网超百万次下载部署" icon="download">
+    累计下载量突破百万次，行业领先
+  </Card>
+  <Card title="超八年稳定维护" icon="clock">
+    持续八年稳定更新，经得起生产考验
+  </Card>
+</CardGroup>
 
-|  | Gitee | Github |
-| --- | --- | --- |
-| 后端代码 | [https://gitee.com/log4j/pig](https://gitee.com/log4j/pig) | [https://github.com/pig-mesh/pig](https://github.com/pig-mesh/pig) |
-| 前端代码 | [https://gitee.com/log4j/pig-ui](https://gitee.com/log4j/pig-ui) | [https://github.com/pig-mesh/pig-ui](https://github.com/pig-mesh/pig-ui) |
-| 配套视频 | [https://tv.pig4cloud.com](https://www.bilibili.com/video/BV12t411B7e9/) | |
+### 配套资源
+<Tabs>
+  <Tab title="后端代码">
+    | 仓库 | 地址 |
+    |---|---|
+    | Gitee | [https://gitee.com/log4j/pig](https://gitee.com/log4j/pig) |
+    | Github | [https://github.com/pig-mesh/pig](https://github.com/pig-mesh/pig) |
+  </Tab>
+  
+  <Tab title="前端代码">
+    | 仓库 | 地址 |
+    |---|---|
+    | Gitee | [https://gitee.com/log4j/pig-ui](https://gitee.com/log4j/pig-ui) |
+    | Github | [https://github.com/pig-mesh/pig-ui](https://github.com/pig-mesh/pig-ui) |
+  </Tab>
+</Tabs>
 
-### 社群 (入群备注：springcloud)
+### 视频教程
+<iframe
+  width="100%"
+  height="500"
+  src="https://player.bilibili.com/player.html?bvid=BV12t411B7e9"
+  title="Bilibili 视频播放器"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
+
+### 加入社群
 ![广告党太多，无备注不通过](/images/1728703600955-45cedb6b-0f2a-4949-ac17-a51239a503c3.png)
 
