--- a/docs/deployment/quick-start.mdx
+++ b/docs/deployment/quick-start.mdx
@@ -1,31 +1,42 @@
 ---
-title: "开发 - 快速开始"
+title: "PIG 微服务快速部署"
 ---
+
+<iframe
+  width="100%"
+  height="500"
+  src="//player.bilibili.com/player.html?isOutside=true&aid=39687329&bvid=BV12t411B7e9&cid=1224704505&p=2"
+  title="Pig4Cloud 部署视频教程"
+  frameborder="0"
+  allowfullscreen="true"
+></iframe>
 
 <Warning>
 **无论您是多年编程的高级工程师，还是刚刚入门的实习生，部署请完全参考本文档操作**
 </Warning>
 
-## ① 基础环境说明
+## 环境准备
 | 工具 | 版本 | 下载 | 备注 |
 | --- | --- | --- | --- |
 | JDK | 17 | [jdk17.0.8-win_x64.msi](https://cdn.azul.com/zulu/bin/zulu17.44.15-ca-jdk17.0.8-win_x64.msi) | 根据分支自行选择 |
 | Maven | 3.8+ | [apache-maven-3.9.4-bin.zip](https://dlcdn.apache.org/maven/maven-3/3.9.4/binaries/apache-maven-3.9.4-bin.zip) | |
 | MySQL | 5.7.8 + | [mysql-installer-community-8.0.18.0.msi.zip](https://www.yuque.com/attachments/yuque/0/2023/zip/283679/1688793202906-bc1535d0-e330-4b5c-a16b-bbef94a1b59a.zip) | 强制要求 |
 | Redis | 7+ | [redis-windows-7.4.2.zip](https://www.yuque.com/attachments/yuque/0/2025/zip/283679/1741774624160-9d8d46df-e0f1-40d5-af31-127d43a2c953.zip) | |
-| node | 18 | [node-v18.20.3-x64.msi.zip](https://www.yuque.com/attachments/yuque/0/2024/zip/283679/1720584223073-e682aad2-1971-43d4-a22e-74484f638562.zip) | 强制要求 |
-| 常用工具 | idea 2023+ | [dev-tools.zip](https://www.yuque.com/attachments/yuque/0/2023/zip/283679/1688793203179-32a2dcff-da73-4642-a009-28fb0623687a.zip) | 非必须 |
+| Node.js | 18 | [node-v18.20.3-x64.msi.zip](https://www.yuque.com/attachments/yuque/0/2024/zip/283679/1720584223073-e682aad2-1971-43d4-a22e-74484f638562.zip) | 强制要求 |
+| 开发工具 | IDEA 2023+ | [dev-tools.zip](https://www.yuque.com/attachments/yuque/0/2023/zip/283679/1688793203179-32a2dcff-da73-4642-a009-28fb0623687a.zip) | 非必须 |
 
+## 项目部署步骤
 
-## ② 项目下载
-
+### 1. 下载项目
 ```shell
 git clone https://gitee.com/log4j/pig.git -b jdk17
 ```
 
-## ③ 初始化数据库
+### 2. 初始化数据库
 <Note>
-- **版本：mysql5.7.8+(支持 8)     默认字符集：utf8mb4   默认排序规则：utf8mb4_general_ci**
+- **版本要求：MySQL 5.7.8+ (支持 8)**
+- **默认字符集：utf8mb4**
+- **默认排序规则：utf8mb4_general_ci**
 </Note>
 
 ```sql
@@ -35,10 +46,11 @@ source db/pig.sql;
 source db/pig_config.sql;
 ```
 
-## ④ 配置文件修改
-### 4.1 修改 regiser 数据库源信息
+### 3. 配置修改
+
+#### 3.1 修改注册中心数据库配置
 <Note>
-**找到源代码目录 pig-register，修改数据库连接信息，然后 Main 方法启动。**
+**找到源代码目录 pig-register，修改数据库连接信息，然后通过 Main 方法启动。**
 </Note>
 
 ```yaml
@@ -51,9 +63,9 @@ db:
     0: jdbc:mysql://${MYSQL-HOST:pig-mysql}:${127.0.0.1:3306}/${MYSQL-DB:pig_config}?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
 ```
 
-### 4.2 修改 redis、mysql 配置
+#### 3.2 修改 Redis 和 MySQL 配置
 <Note>
-访问 nacos： [http://127.0.0.1:8848/nacos](http://127.0.0.1:8848/nacos#/configurationManagement) (默认账号密码 nacos/nacos)
+访问 Nacos 控制台：[http://127.0.0.1:8848/nacos](http://127.0.0.1:8848/nacos#/configurationManagement) (默认账号密码：nacos/nacos)
 </Note>
 
 ![](/images/1736924558140-a6b70b07-3071-4a9b-bc59-e31a1a656ca3.png)
@@ -65,7 +77,7 @@ db:
 | `pig-codegen-dev.yml` | 数据库链接信息 |
 | `pig-quartz-dev.yml` | 数据库链接信息 |
 
-## ⑤ 启动顺序 
+### 4. 服务启动顺序
 <Note>
 **找到对应模块的类，直接右键 Main 启动即可**
 </Note>
@@ -87,48 +99,47 @@ db:
 7. pig-quartz/PigQuartzApplication
 ```
 
-## ⑥ 部署前端
-### 6.1 检查 node 版本
+### 5. 前端部署
+
+#### 5.1 环境检查
 ```shell
-#  检查 node 版本 = 18
+# 检查 node 版本 = 18
 node -v 
 
 # 若高版本 node 可执行 n 命令切换至 18 版本
 n 18
 ```
 
-### 6.2 下载前端代码
+#### 5.2 下载前端代码
 ```shell
 git clone https://gitee.com/log4j/pig-ui.git
 ```
 
-### 6.3 安装依赖
+#### 5.3 安装依赖
 ```shell
-npm install  --registry=https://registry.npmmirror.com
+npm install --registry=https://registry.npmmirror.com
 ```
 
-### 6.4 启动
+#### 5.4 启动前端服务
 ```shell
 npm run dev
 ```
 
-### 6.5 访问前端
+#### 5.5 访问系统
 <Note>
-浏览器访问：http://localhost:8888
-
-默认用户名：admin
-
-默认密码：123456
+- 浏览器访问：http://localhost:8888
+- 默认用户名：admin
+- 默认密码：123456
 </Note>
 
-### 6.6 特别说明
+#### 5.6 注意事项
 <Warning>
-1. npm install 过程中可能由于网络关系等，提示报错，请删除
-2. pig-ui 根目录中 node_modules 重新执行 npm install 命令即可
-3. 注意 node 版本不要太高，18 是个不错的版本选择
+1. 如果 npm install 过程中出现网络问题导致报错，请删除 pig-ui 根目录中的 node_modules 文件夹
+2. 重新执行 npm install 命令
+3. 注意 node 版本不要太高，推荐使用 18 版本
 </Warning>
 
-## 问题咨询
+## 社区支持
 <Card title="加入社区" icon="link" href="#">
 ![广告党太多，无备注不通过](/images/1728703600955-45cedb6b-0f2a-4949-ac17-a51239a503c3.png)
 </Card>
